--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
           <table border="0" cellspacing="0" cellpadding="3">
             <tr>
               <td width="100%">
-          <p class="text-center">Bola de Cristal</p>          
-          <p class="text-content">Por favor faça uma pergunta, cujo resposta é sim ou não e eu irei responder!</p>
-          <p class="text-content">⚠️Cuidado⚠️ A bola de cristal costuma ser sarcástica!</p>
+          <p class="text-center">Bola de Cristal</p> <br>          
+          <p class="text-content">Por favor faça uma pergunta, cujo resposta é sim ou não e eu irei responder!</p><br>
+          <p class="text-content">⚠️Cuidado⚠️<br> A bola de cristal costuma ser sarcástica!</p><br>
           <table width="40%" border="0">
           <tr>
           <td>
