--- a/index.html
+++ b/index.html
@@ -4,56 +4,71 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Courgette&family=Creepster&display=swap" rel="stylesheet">    <link rel="stylesheet" href="./css/style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Courgette&family=Creepster&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./css/style.css" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD"
+      crossorigin="anonymous"
+    />
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
+      crossorigin="anonymous"
+    ></script>
     <title>Bola de Cristal</title>
   </head>
   <body>
     <div class="conteiner">
-      <div class="stars">
-        <ul class="circles">
-          <li></li>
-          <li></li>
-          <li></li>
-          <li></li>
-          <li></li>
-          <li></li>
-          <li></li>
-          <li></li>
-          <li></li>
-          <li></li>
-  </ul>
-      </div>
       <div class="ball">
-        <img src="./img/cristal.png" class="cristalImg" alt="Bola de Cistal" />
-        <div class="ball-content">
-          <table border="0" cellspacing="0" cellpadding="3">
-            <tr>
-              <td width="100%">
-          <p class="text-center">Bola de Cristal</p> <br>          
-          <p class="text-content">Por favor faça uma pergunta, cujo resposta é sim ou não e eu irei responder!</p><br>
-          <p class="text-content">⚠️Cuidado⚠️<br> A bola de cristal costuma ser sarcástica!</p><br>
-          <table width="40%" border="0">
-          <tr>
-          <td>
-          <form name="input1" method="post">
-          <input name="textfield" class="inputBall">
-          </form>
-          </td>
-          </tr>
-          </table>
-          <table width="8%" border="0">
-          <tr>
-          <td>
-          <form method="post">
-          <input type="button" class="btn" name="button1" value="Perguntar"
-          onClick="getAnswers()">
-          </form>
-          </td>
-          </tr>
-          </table>
-        </div>
+        <img
+          src="./img/cristal.png"
+          class="cristalImg rounded mx-auto d-block"
+          alt="Bola de Cistal"
+        />
+      </div>
+      <div class="ball-content text-center">
+        <p class="text-title">Bola de Cristal</p>
+        <p class="text-content">
+          Por favor faça uma pergunta, cujo resposta é sim ou não e eu irei
+          responder!
+        </p>
+        <p class="text-content">
+          ⚠️Cuidado⚠️<br />
+          A bola de cristal costuma ser sarcástica!
+        </p>
+
+        <form name="input1" method="post" class="ball-content">
+          <input name="textfield" class="inputBall" />
+        </form>
+
+        <form method="post">
+          <input
+            type="button"
+            class="button"
+            name="button1"
+            value="Perguntar"
+            onClick="getAnswers()"
+          />
+        </form>
       </div>
     </div>
     <script src="./script/index.js"></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
+      integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js"
+      integrity="sha384-mQ93GR66B00ZXjt0YO5KlohRA5SY2XofN4zfuZxLkoj1gXtW8ANNCe9d5Y3eG5eD"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
