--- a/index.html
+++ b/index.html
@@ -26,14 +26,14 @@
   </head>
   <body>
     <div class="conteiner">
-      <div class="ball">
+      <div class="ball text-center">
         <img
           src="./img/cristal.png"
           class="cristalImg rounded mx-auto d-block"
           alt="Bola de Cistal"
         />
       </div>
-      <div class="ball-content text-center">
+      <div class="ball-content">
         <p class="text-title">Bola de Cristal</p>
         <p class="text-content">
           Por favor faça uma pergunta, cujo resposta é sim ou não e eu irei
