atualização de código
exclusão de linhas e adição de novo formato de código, página responsiva e com dados atualizados para acesso em dispositivos moveis.

--- a/index.html
+++ b/index.html
@@ -25,29 +25,19 @@
     <title>Bola de Cristal</title>
   </head>
   <body>
-    <div class="conteiner">
-      <div class="ball text-center">
-        <img
-          src="./img/cristal.png"
-          class="cristalImg rounded mx-auto d-block"
-          alt="Bola de Cistal"
-        />
-      </div>
-      <div class="ball-content">
-        <p class="text-title">Bola de Cristal</p>
-        <p class="text-content">
-          Por favor faça uma pergunta, cujo resposta é sim ou não e eu irei
-          responder!
-        </p>
-        <p class="text-content">
-          ⚠️Cuidado⚠️<br />
-          A bola de cristal costuma ser sarcástica!
-        </p>
-
+    <div class="container">       
+          <p class="text-title">Bola de Cristal</p>          
+            <p class="text-content">
+              Por favor faça uma pergunta, cujo resposta é sim ou não e eu irei
+              responder!
+            </p>
+            <p class="text-content">
+              ⚠️Cuidado⚠️<br />
+              A bola de cristal costuma ser sarcástica!
+            </p>      
         <form name="input1" method="post" class="ball-content">
           <input name="textfield" class="inputBall" />
         </form>
-
         <form method="post">
           <input
             type="button"
@@ -56,8 +46,7 @@
             value="Perguntar"
             onClick="getAnswers()"
           />
-        </form>
-      </div>
+        </form>     
     </div>
     <script src="./script/index.js"></script>
     <script
